# buckets-manager-mvp

./: .gitignore  README.md  main.py  pyproject.toml
sql/: version_1.sql  version_2.sql  version_3.sql  version_4.sql  version_5.sql  version_6.sql
src/: app.py  minio_client.py
